--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,7 @@
     "js": [
       "js/jquery-2.2.4.min.js",
       "js/jquery.min.js",
+      "js/sweetalert2.all.js",
       "js/desktop.js"
     ],
     "css": [
@@ -28,9 +29,7 @@
       "css/51-modern-default.css",
       "css/config.css"
     ],
-    "required_params": [
-
-    ]
+    "required_params": []
   },
   "name": {
     "en": "Querykintone"
